# DzSbom

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: sbom-sca.yml
ci/: export_dependency_track_findings.sh  summarize_reports.py  upload_to_dependency_track.sh
src/sbom_demo/: app.py
tests/: test_smoke.py
