[tool.poetry]
name = "sbom-python-demo"
version = "0.1.0"
description = "Demo Python project for SBOM + Dependency-Check + Dependency-Track exercises"
authors = ["Student <student@example.com>"]
readme = "README.md"
packages = [{include = "sbom_demo", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "==2.0.3"
requests = "==2.19.1"
# Intentionally old to demonstrate vulnerability findings in SCA tools
Django = "==2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "==7.4.4"
black = "==23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
